# Ecomeristem

./: .gitignore  AUTHORS  CMakeLists.txt  README
data/: dump.sql
data/reference/: AreaLFEL_out.txt  CGRStress_out.txt  DD_out.txt  DWLFEL_out.txt  EDD_out.txt  FTSW_out.txt  IH_out.txt  Ic_mainstem_out.txt  Ic_out.txt  LAI_out.txt  PHT_out.txt  PLA_out.txt  R_d_out.txt  SLALFEL_out.txt  SLA_out.txt  SLAplant_out.txt  SLAreal_out.txt  SLAstruct_out.txt  SWC_out.txt  TT_lig_out.txt  TT_out.txt  assim_mainstem_out.txt  assim_out.txt  biomAero2_out.txt  biomAero_out.txt  biomIn_out.txt  biomLeaf_out.txt  biomRoot_out.txt  biomTot_out.txt  computedReallocBiomass_out.txt  cstr_out.txt  dayDemand_out.txt  day_demand_mainstem_out.txt  deadleafNb_out.txt  deadtillerNb_out.txt  deficit_out.txt  deltap_out.txt  diameter_IN10_T_1_out.txt  diameter_IN10_out.txt  diameter_IN11_T_1_out.txt  (+138 more)
data/reference/rice/: AreaLFEL_out.txt  CGRStress_out.txt  DD_out.txt  FTSW_out.txt  IH_out.txt  Ic_mainstem_out.txt  Ic_out.txt  LAI_out.txt  PLA_out.txt  SLAreal_out.txt  SLAstruct_out.txt  TT_lig_out.txt  TT_out.txt  assim_mainstem_out.txt  biomBlade_out.txt  biomInMainstem_out.txt  biomLeafMainstem_out.txt  biomLeaf_out.txt  computedReallocBiomass_out.txt  dayDemand_out.txt  deadleafNb_out.txt  diameter_IN10_T_1_out.txt  diameter_IN10_out.txt  diameter_IN11_out.txt  diameter_IN13_out.txt  diameter_IN2_T_5_out.txt  diameter_IN3_T_1_out.txt  diameter_IN3_T_3_out.txt  diameter_IN4_T_2_out.txt  diameter_IN4_T_6_out.txt  diameter_IN5_T_1_out.txt  diameter_IN5_T_2_out.txt  diameter_IN5_T_3_out.txt  diameter_IN5_T_4_out.txt  diameter_IN5_T_7_out.txt  diameter_IN6_T_2_out.txt  diameter_IN6_out.txt  diameter_IN7_T_1_out.txt  diameter_IN7_T_2_out.txt  diameter_IN7_out.txt  (+42 more)
data/reference/sorghum/: AreaLFEL_out.txt  CGRStress_out.txt  DD_out.txt  DWLFEL_out.txt  ECOMERISTEM_parameters.txt  ECOMERISTEM_parameters_avec_talles.txt  EDD_out.txt  Explo_G1_BFF2014___05-03-2015.txt  FTSW_out.txt  (+116 more)
ecomeristemQt/: ecomeristemQt.pro  graphView.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
qt5.7/: ecomeristemQt.pro  mainwindow.cpp  mainwindow.h  parametersdatamodel.cpp
src/: CMakeLists.txt
src/app/: CMakeLists.txt  main.cpp
src/ecomeristem/: version.hpp
src/model/: CMakeLists.txt  version.hpp.in
src/model/kernel/: AbstractAtomicModel.hpp  AbstractCoupledModel.hpp  AbstractModel.hpp  CMakeLists.txt  KernelModel.cpp  KernelModel.hpp  Model.cpp  Model.hpp  Simulator.cpp  Simulator.hpp
src/model/models/: CMakeLists.txt  ModelParameters.cpp  ModelParameters.hpp
src/model/models/ecomeristem/: CMakeLists.txt  EcomeristemModel.cpp  EcomeristemModel.hpp  Model.cpp  Model.hpp
src/model/models/ecomeristem/culm/: CMakeLists.txt  CulmModel.cpp  CulmModel.hpp  CulmStock.hpp  CulmSupply.hpp  CulmSurplus.hpp  Deficit.hpp  Intermediate.hpp  MaxReservoirDispo.hpp  Model.cpp  Model.hpp  Stock.hpp  Supply.hpp  Surplus.hpp
src/model/models/ecomeristem/internode/: Biomass.hpp  CMakeLists.txt  DiameterPredim.hpp  ExpTime.hpp  INER.hpp  InternodeDemand.hpp  InternodeExpTime.hpp  InternodeLastDemand.hpp  InternodeLen.hpp  InternodeModel.cpp  InternodeModel.hpp  InternodePredim.hpp  InternodeTimeFromApp.hpp  LastDemand.hpp  Len.hpp  Manager.hpp  Model.cpp  Model.hpp  Predim.hpp  ReductionINER.hpp  TimeFromApp.hpp  Volume.hpp
src/model/models/ecomeristem/leaf/: Biomass.hpp  BladeArea.hpp  CMakeLists.txt  ExpTime.hpp  LER.hpp  LastDemand.hpp  LeafDemand.hpp  LeafExpTime.hpp  LeafLastDemand.hpp  LeafLen.hpp  LeafManager.hpp  LeafModel.cpp  LeafModel.hpp  LeafPredim.hpp  LeafTimeFromApp.hpp  Len.hpp  LifeSpan.hpp  Manager.hpp  Model.cpp  Model.hpp  PlastoDelay.hpp  Predim.hpp  ReductionLER.hpp  ThermalTimeSinceLigulation.hpp  TimeFromApp.hpp  Width.hpp
src/model/models/ecomeristem/panicle/: CMakeLists.txt  Model.cpp  Model.hpp  PanicleModel.cpp  PanicleModel.hpp
src/model/models/ecomeristem/peduncle/: CMakeLists.txt  Model.cpp  Model.hpp  PeduncleModel.cpp  PeduncleModel.hpp
src/model/models/ecomeristem/phytomer/: CMakeLists.txt  Model.cpp  Model.hpp  PhytomerModel.cpp
src/model/models/ecomeristem/plant/: CMakeLists.txt  Lig.hpp  Manager.cpp  Manager.hpp  Model.cpp  Model.cpp.orig  Model.hpp  PlantManager.cpp  PlantManager.hpp  PlantModel.cpp  PlantModel.hpp  SLA.hpp  TillerManager.hpp
src/model/models/ecomeristem/plant/assimilation/: Assim.hpp  AssimPot.hpp  CMakeLists.txt  Interc.hpp  LAI.hpp  Lai.hpp  Model.cpp  Model.hpp  PlantAssimilationModel.cpp  PlantAssimilationModel.hpp  RespMaint.hpp
src/model/models/ecomeristem/plant/stock/: CMakeLists.txt  DayDemand.hpp  IndexCompetition.hpp  Model.cpp  Model.hpp  PlantStock.hpp  PlantStockModel.cpp  PlantStockModel.hpp  PlantSupply.hpp  ReservoirDispo.hpp  SeedRes.hpp  Stock.hpp  StockSurplus.hpp  Supply.hpp  Surplus.hpp
src/model/models/ecomeristem/plant/thermal-time/: CMakeLists.txt  DD.hpp  DeltaT.hpp  IH.hpp  LiguloVisu.hpp  Model.cpp  Model.hpp  PhenoStage.hpp  PlastoVisu.hpp  TT.hpp  TT_lig.hpp  ThermalTimeManager.hpp  ThermalTimeModel.cpp  ThermalTimeModel.hpp
src/model/models/ecomeristem/plant/water-balance/: CMakeLists.txt  FTSW.hpp  Model.cpp  Model.hpp  SWC.hpp  WaterBalanceModel.cpp  WaterBalanceModel.hpp  cstr.hpp  fcstr.hpp  transpiration.hpp
src/model/models/ecomeristem/root/: CMakeLists.txt  Model.cpp  Model.hpp  RootDemand.hpp  RootDemandCoef.hpp  RootManager.hpp  RootModel.cpp  RootModel.hpp
src/model/models/meteo/: CMakeLists.txt  Meteo.cpp  Meteo.cpp.orig  Meteo.hpp  Meteo.hpp.orig  MeteoModel.cpp  MeteoModel.hpp  Meteo_BASE_9884.cpp
src/model/observer/: CMakeLists.txt  Observer.cpp  Observer.hpp  PlantView.hpp  View.cpp  View.hpp
src/test/: CMakeLists.txt  test-bilan.cpp  test.cpp
src/utils/: CMakeLists.txt  Connections.cpp  Connections.hpp  DateTime.hpp  DateTime.hpp.orig  Exception.hpp  ParametersReader.cpp  ParametersReader.cpp.orig  ParametersReader.hpp  ParametersReader.hpp.orig  Trace.cpp  Trace.hpp  Trace.hpp.orig
vs2015/: Ecomeristem.sln  Ecomeristem.vcxproj  Ecomeristem.vcxproj.filters  Ecomeristem_MT.vcxproj
(+14 files in other folders)
