INCLUDE_DIRECTORIES(
  ${CMAKE_SOURCE_DIR}/src)

LINK_DIRECTORIES()

SET(ECOMERISTEM_OBSERVER_HPP Observer.hpp)

SET(ECOMERISTEM_OBSERVER_CPP Observer.cpp)

ADD_LIBRARY(ecomeristem-observer SHARED ${ECOMERISTEM_OBSERVER_HPP} ${ECOMERISTEM_OBSERVER_CPP})
TARGET_LINK_LIBRARIES(ecomeristem-observer )

INSTALL(TARGETS ecomeristem-observer DESTINATION lib)
