INCLUDE_DIRECTORIES(
  ${CMAKE_SOURCE_DIR}/src ${ARTIS_INCLUDE_DIRS})

LINK_DIRECTORIES(${ARTIS_LIBRARY_DIRS})

SET(ECOMERISTEM_OBSERVER_HPP PlantView.hpp View.hpp)

SET(ECOMERISTEM_OBSERVER_CPP View.cpp)

ADD_LIBRARY(ecomeristem-observer SHARED ${ECOMERISTEM_OBSERVER_HPP}
  ${ECOMERISTEM_OBSERVER_CPP})
TARGET_LINK_LIBRARIES(ecomeristem-observer )

INSTALL(TARGETS ecomeristem-observer DESTINATION lib)
