INCLUDE_DIRECTORIES(
  ${CMAKE_SOURCE_DIR}/src ${ARTIS_INCLUDE_DIRS})

LINK_DIRECTORIES(${ARTIS_LIBRARY_DIRS})

SET(ECOMERISTEM_CORE_HPP Model.hpp)

SET(ECOMERISTEM_CORE_CPP Model.cpp)

ADD_LIBRARY(ecomeristem-core SHARED ${ECOMERISTEM_CORE_HPP}
  ${ECOMERISTEM_CORE_CPP})
TARGET_LINK_LIBRARIES(ecomeristem-core ecomeristem-plant)

INSTALL(TARGETS ecomeristem-core DESTINATION lib)

ADD_SUBDIRECTORY(culm)
ADD_SUBDIRECTORY(internode)
ADD_SUBDIRECTORY(leaf)
ADD_SUBDIRECTORY(panicle)
ADD_SUBDIRECTORY(peduncle)
ADD_SUBDIRECTORY(phytomer)
ADD_SUBDIRECTORY(plant)
ADD_SUBDIRECTORY(root)
