INCLUDE_DIRECTORIES(
  ${CMAKE_SOURCE_DIR}/src)

LINK_DIRECTORIES()

SET(ECOMERISTEM_METEO_HPP Meteo.hpp)

SET(ECOMERISTEM_METEO_CPP Meteo.cpp)

ADD_LIBRARY(ecomeristem-models-meteo SHARED ${ECOMERISTEM_METEO_HPP}
  ${ECOMERISTEM_METEO_CPP})
TARGET_LINK_LIBRARIES(ecomeristem-models-meteo )

INSTALL(TARGETS ecomeristem-models-meteo DESTINATION lib)