INCLUDE_DIRECTORIES(
  ${CMAKE_SOURCE_DIR}/src ${ARTIS_INCLUDE_DIRS})

LINK_DIRECTORIES(${ARTIS_LIBRARY_DIRS})

SET(ECOMERISTEM_CULM_HPP Model.hpp Deficit.hpp Intermediate.hpp
  MaxReservoirDispo.hpp Stock.hpp Supply.hpp Surplus.hpp)

SET(ECOMERISTEM_CULM_CPP Model.cpp)

ADD_LIBRARY(ecomeristem-culm SHARED ${ECOMERISTEM_CULM_HPP}
  ${ECOMERISTEM_CULM_CPP})
TARGET_LINK_LIBRARIES(ecomeristem-culm)

INSTALL(TARGETS ecomeristem-culm DESTINATION lib)
