INCLUDE_DIRECTORIES(
  ${CMAKE_SOURCE_DIR}/src)

LINK_DIRECTORIES()

SET(ECOMERISTEM_INTERNODE_HPP Model.hpp)

SET(ECOMERISTEM_INTERNODE_CPP Model.cpp)

ADD_LIBRARY(ecomeristem-internode SHARED ${ECOMERISTEM_INTERNODE_HPP} ${ECOMERISTEM_INTERNODE_CPP})
TARGET_LINK_LIBRARIES(ecomeristem-internode)

INSTALL(TARGETS ecomeristem-internode DESTINATION lib)
