INCLUDE_DIRECTORIES(
  ${CMAKE_SOURCE_DIR}/src)

LINK_DIRECTORIES()

SET(ECOMERISTEM_PANICLE_HPP Model.hpp)

SET(ECOMERISTEM_PANICLE_CPP Model.cpp)

ADD_LIBRARY(ecomeristem-panicle SHARED ${ECOMERISTEM_PANICLE_HPP} ${ECOMERISTEM_PANICLE_CPP})
TARGET_LINK_LIBRARIES(ecomeristem-panicle)

INSTALL(TARGETS ecomeristem-panicle DESTINATION lib)
