INCLUDE_DIRECTORIES(
  ${CMAKE_SOURCE_DIR}/src)

LINK_DIRECTORIES()

SET(ECOMERISTEM_PEDUNCLE_HPP Model.hpp)

SET(ECOMERISTEM_PEDUNCLE_CPP Model.cpp)

ADD_LIBRARY(ecomeristem-peduncle SHARED ${ECOMERISTEM_PEDUNCLE_HPP} ${ECOMERISTEM_PEDUNCLE_CPP})
TARGET_LINK_LIBRARIES(ecomeristem-peduncle)

INSTALL(TARGETS ecomeristem-peduncle DESTINATION lib)
