INCLUDE_DIRECTORIES(
  ${CMAKE_SOURCE_DIR}/src ${ARTIS_INCLUDE_DIRS})

LINK_DIRECTORIES(${ARTIS_LIBRARY_DIRS})

SET(ECOMERISTEM_PHYTOMER_HPP Model.hpp)

SET(ECOMERISTEM_PHYTOMER_CPP Model.cpp)

ADD_LIBRARY(ecomeristem-phytomer SHARED ${ECOMERISTEM_PHYTOMER_HPP}
  ${ECOMERISTEM_PHYTOMER_CPP})
TARGET_LINK_LIBRARIES(ecomeristem-phytomer)

INSTALL(TARGETS ecomeristem-phytomer DESTINATION lib)
