INCLUDE_DIRECTORIES(
  ${CMAKE_SOURCE_DIR}/src)

LINK_DIRECTORIES()

SET(ECOMERISTEM_PLANT_HPP Model.hpp)

SET(ECOMERISTEM_PLANT_CPP Model.cpp)

ADD_LIBRARY(ecomeristem-plant SHARED ${ECOMERISTEM_PLANT_HPP} ${ECOMERISTEM_PLANT_CPP})
TARGET_LINK_LIBRARIES(ecomeristem-plant)

INSTALL(TARGETS ecomeristem-plant DESTINATION lib)

ADD_SUBDIRECTORY(assimilation)
ADD_SUBDIRECTORY(stock)
ADD_SUBDIRECTORY(thermal-time)
ADD_SUBDIRECTORY(water-balance)