INCLUDE_DIRECTORIES(
  ${CMAKE_SOURCE_DIR}/src)

LINK_DIRECTORIES()

SET(ECOMERISTEM_ROOT_HPP Model.hpp)

SET(ECOMERISTEM_ROOT_CPP Model.cpp)

ADD_LIBRARY(ecomeristem-root SHARED ${ECOMERISTEM_ROOT_HPP} ${ECOMERISTEM_ROOT_CPP})
TARGET_LINK_LIBRARIES(ecomeristem-root)

INSTALL(TARGETS ecomeristem-root DESTINATION lib)
