INCLUDE_DIRECTORIES(
  ${CMAKE_SOURCE_DIR}/src ${ARTIS_INCLUDE_DIRS})

LINK_DIRECTORIES(${ARTIS_LIBRARY_DIRS})

SET(ECOMERISTEM_ROOT_HPP RootDemand.hpp RootDemandCoef.hpp RootManager.hpp
  Model.hpp)

SET(ECOMERISTEM_ROOT_CPP Model.cpp)

ADD_LIBRARY(ecomeristem-root SHARED ${ECOMERISTEM_ROOT_HPP} ${ECOMERISTEM_ROOT_CPP})
TARGET_LINK_LIBRARIES(ecomeristem-root)

INSTALL(TARGETS ecomeristem-root DESTINATION lib)
