INCLUDE_DIRECTORIES(
  ${CMAKE_SOURCE_DIR}/src)

LINK_DIRECTORIES()

SET(ECOMERISTEM_PLANT_STOCK_HPP Model.hpp)

SET(ECOMERISTEM_PLANT_STOCK_CPP Model.cpp)

ADD_LIBRARY(ecomeristem-plant-stock SHARED ${ECOMERISTEM_PLANT_STOCK_HPP} ${ECOMERISTEM_PLANT_STOCK_CPP})
TARGET_LINK_LIBRARIES(ecomeristem-plant-stock)

INSTALL(TARGETS ecomeristem-plant-stock DESTINATION lib)
