INCLUDE_DIRECTORIES(
  ${CMAKE_SOURCE_DIR}/src)

LINK_DIRECTORIES()

SET(ECOMERISTEM_PLANT_THERMAL_TIME_HPP Model.hpp)

SET(ECOMERISTEM_PLANT_THERMAL_TIME_CPP Model.cpp)

ADD_LIBRARY(ecomeristem-plant-thermal-time SHARED ${ECOMERISTEM_PLANT_THERMAL_TIME_HPP} ${ECOMERISTEM_PLANT_THERMAL_TIME_CPP})
TARGET_LINK_LIBRARIES(ecomeristem-plant-thermal-time)

INSTALL(TARGETS ecomeristem-plant-thermal-time DESTINATION lib)
